# operation

./: .gitIgnore  README.md  pyproject.toml
chroma_data/d0414d0b-c86e-41d3-81ec-636d296c9125/: index_metadata.pickle
operation/: chatbot.py
